# ParaFlow

./: .env.example  CLAUDE.md  README.md  README_NOTION_MVP.md  pyproject.toml  requirements.txt
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
docs/: _config.yml  api_specification.md  architecture_decisions.md  code_architecture.md  discussion.md  domain_model.md  index.md  notion_mcp_research.md
examples/: __init__.py  demo_script.py
specs/001-mvp-database-crud/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mvp-database-crud/contracts/: database_operations.yaml
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_notion_integration.py
tests/unit/: __init__.py
tests/unit/application/: test_page_operations.py
tests/unit/domain/: test_page.py
